# 474-p4

./: .gitignore  474_p4  CMakeLists.txt  Instruction.cpp  Instruction.h  Invoker.cpp  Invoker.h  LinkedList.cpp  LinkedList.h  Makefile  Receiver.cpp  Receiver.h  input.wl  main.cpp
